syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcServer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc ChatNotification(stream NotificationsRequest) returns (stream NotificationsResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message NotificationsRequest {
	string message = 1;
	string to = 2;
	string from = 3;
}

message NotificationsResponse {
	string message = 1;
	google.protobuf.Timestamp receiverAt = 3;
}